--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
 </style>
 <body>
 <h1>Shafqat Bhuiyan</h1>
-<h3><a href="/rent-vs-buy">Sydney - Rent vs Buy calculator</a></h3>
+<h3><a href="/rent-vs-buy-calculator/">Sydney - Rent vs Buy calculator</a></h3>
 </body>
